@@ -1,3 +1,7 @@
+drkns 24.06.2016 01:39:45 +0200 - build 4724
+
+1. Продолжение 4723 - исключение для ShiftEnter и поддержка run as.
+
 drkns 24.06.2016 01:15:01 +0200 - build 4723
 
 1. Очень экспериментальная фича: встроенные ассоциации распространяются на комстроку.
